Adjust symbol bounding to avoid scrollbars

--- a/destiny/vow/style.css
+++ b/destiny/vow/style.css
@@ -50,9 +50,9 @@ a[href] {
 }
 
 .symbol {
-    margin: 4px;
+    margin: 0.25em;
     background-color: #111;
-    border-radius: 4px;
+    border-radius: 0.25em;
     border: 1px solid #ddd;
     overflow: auto;
     float: left;
@@ -74,15 +74,22 @@ a[href] {
     background: rgba(16, 16, 16, 0);
     font-weight: bold;
     text-align: center;
-    padding: 3px 0px;
+    padding: 0.25em 0;
     display: block;
     width: 100%;
     height: 100%;
 }
+.symbol label span > div {
+    position: absolute;
+    top: 0;
+    padding: 0.5em;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
 
 .symbol label input {
     position: absolute;
-    top: -20px;
+    top: -10em;
 }
 
 .symbol input:hover+span {
